2011-08-09  Ulrich Drepper  <drepper@gmail.com>

	* Versions.def [libc]: Add GLIBC_2.15.
	* dirent/Makefile (routines): Add scandirat and scandirat64.
	* dirent/Versions [libc]: Export scandirat and scandirat64 for
	GLIBC_2.15.
	* dirent/dirent.h: Declare scandirat and scandirat64.
	* dirent/scandirat.c: New file.
	* dirent/scandirat64.c: New file.
	* sysdeps/wordsize-64/scandirat.c: New file.
	* sysdeps/wordsize-64/scandirat64.c: New file.
	* dirent/opendir.c: Define opendirat.
	* dirent/scandir.c: Move code to scandirat.c.  Implement scandir
	using scandirat.
	* dirent/scandir64.c: Adjust for scandir.c change.
	* include/dirent.h: Define scandir_cancel_struct.  Declare __opendirat,
	__scandirat64, and __scandir_cancel_handler.
	* sysdeps/unix/opendir.c: Rename __opendir to __opendirat.  Take
	additional parameter and use openat instead of open (outside of ld.so).
	Add new __opendir as wrapper around __opendirat.
	* sysdeps/unix/sysv/linux/i386/scandir64.c: Reimplement __old_scandir64
	here without requiring old scandirat implementation.

2011-08-08  Ulrich Drepper  <drepper@gmail.com>

	* dirent/scandir.c (cancel_handler): Renamed to
	__scandir_cancel_handler.  Do not define if SKIP_SCANDIR_CANCEL is
	defined.  Adjust users.
	* dirent/scandir64.c: Define SKIP_SCANDIR_CANCEL.
	* sysdeps/unix/sysv/linux/i386/scandir64.c: Likewise.

2011-08-04  Ulrich Drepper  <drepper@gmail.com>

	* string/test-string.h (IMPL): Use __STRING to expand name and then
	stringify it.

	* string/test-strcmp.c: Unify most of the WIDE and !WIDE code.  Lots
	of cleanups.

2011-07-22  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* string/Makefile: Update.
	(strop-tests): Append strncat.
	* string/test-wcscmp.c: New file.
	New comprehensive test for wcscmp.
	* string/test-strcmp.c: Update.
	(WIDE): New define.

2011-07-22  Andreas Schwab  <schwab@redhat.com>

	* resolv/res_init.c (__res_vinit): Properly tokenize nameserver
	line.

2011-07-26  Andreas Schwab  <schwab@redhat.com>
