@@ -1,3 +1,11 @@
+2011-08-10  David S. Miller  <davem@davemloft.net>
+
+	* sysdeps/unix/sysv/linux/ia64/sys/ptrace.h: Add missing comma in
+	enum.
+	* sysdeps/unix/sysv/linux/powerpc/sys/ptrace.h: Likewise.
+	* sysdeps/unix/sysv/linux/s390/sys/ptrace.h: Likewise.
+	* sysdeps/unix/sysv/linux/sparc/sys/ptrace.h: Likewise.
+
 2011-08-09  Ulrich Drepper  <drepper@gmail.com>
 
 	* Versions.def [libc]: Add GLIBC_2.15.
